--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: rebuild@littlewitch.academy
 description: >- # this means to ignore newlines until "baseurl:"
   This is the real academia for science-fed people.
 baseurl: "/learn" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://shimogawa.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  Shimogawa
 
