--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ defaults:
 
 header_pages:
   - about.md
+  - contents.md
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
